Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-70873

REG->5.11.1: WM_NCHITTEST message not capturing by QAbstractNativeEventFilter

XMLWordPrintable

    • Windows
    • 18ec0a8b0991855f4576c2993832f9da41d97766 (qt/qtbase/5.11)

      WINAPI "WM_NCHITTEST" message not capturing by QAbstractNativeEventFilter
      Qt 5.11.2+ affected
      It's blocker for many frameless apps which using QAbstractNativeEventFilter to handle window resize, movement etc
      Example attached.
      With Qt <= 5.10 app window can be moved by mouse as HTCAPTION returned as result for case WM_NCHITTEST.
      With Qt >= 5.11.2 WM_NCHITTEST native events not coming to QAbstractNativeEventFilter

      Probably 5.11.0 is not affected.

        1. qtbug70873.zip
          2 kB
          Friedemann Kleint
        2. qt-bug-winhittest.zip
          17 kB
          Anton Bulychev
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            pokamest Anton Bulychev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes